    - 2-channel headphone downmix
    - Stereo to 5.1 upmix
- Improve DRC implementation
- Psychoacoustic model & delta bit allocation
- Gapless info using auxdata field
- Streaming interface to libaften / internal sample buffer
- Better error logging for libaften
- pkg-config support or alike
- Channel layout support in PCM decoder

Aften Changelog
---------------
version SVN : current
- added C# bindings with simple high level API
- changed API to simplify its usage
- added API.txt
- fixed aften error handling
- fixed libaften closing in threaded mode, simplifying its usage
- AftenContext has a new member called initial_samples.
  If 256 samples are provided here, the first frame is not padded
  with zero samples. Nevertheless, you shouldn't use this option unless
  you need perfect sync, as these first 256 samples can't properly be
  reconstructed.
- fixed bug in wav to ac3 channel remapping
- Multiple-file commandline input with channel designation
- AIFF file support
- CAFF file support
- changed API to create a new exponent strategy decision with better quality
  and more flexibility
- rearranged code structure of SIMD optimizations

version 0.08 :
- fixed piped input from FFmpeg
- added support for MPEG channel order remapping
- restructured audio input. enables raw pcm file support.
- bugfixes in MMX/SSE2 code
- stack align hack for x86 MinGW with threads
- API changes
- SIMD and threads usage is shown and is configurable
- screen output gets updated every 200ms to reduce load
- SIMD detection changed to compiler-independent inline assembly,
  thus nasm/yasm not needed anymore

version 0.07 : 25 April 2007
- added C++ bindings (pass -DBINDINGS_CXX=1 to cmake to build them)
- API change of helper functions
- new and more precise bitalloc algorithm
- parallelization
- optional faster exponent strategy decision
- added SSE version of window function
- added MMX and SSE2 versions of some exponent related functions
- removed old build system