@@ -30,7 +30,7 @@
 
 #include "common.h"
 
-#ifdef HAVE_MMX
+#if defined(HAVE_MMX) || defined(HAVE_SSE)
 #include "x86/exponent.h"
 #endif
 
